working on styling left nav

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,12 @@
   %body
     = render "/header"
     .content
-      = yield
+      .main
+        .left-nav
+          = render "/left_nav"
+        .yield
+
+          = yield
 
   %footer
     = render "/footer"
