--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -75,7 +75,84 @@ body{
 
   }
 
+  .content{
+    .main{
+      width: 100%;
+      display: inline-block;
+      background-color: white;
+      margin-bottom: -5px;
+
+      .left-nav{
+        background-color: white;
+        width:  245px;
+        float: left;
+        padding-left: 10px;
+        padding-right: 10px;
+
+        .contact-info{
+          margin-top: 20px;
+          letter-spacing: -0.07em;
+          color: $main_green;
+
+          .name{
+            font-weight: bold;
+            font-size: 18px;
+          }
+          .address{
+            font-size: 16px;
+            margin-top: 10px;
+          }
+
+          .contact{
+            margin-top: 15px;
+
+          }
+
+          .site-links{
+            margin-top: 15px;
+            margin-bottom: 15px;
+            height: 50px;
+
+            a{
+              display: block;
+              float: left;
+              margin-right: 18px;
+            }
+
+            .aca{
+              img{
+                width: 85px;
+              }
+            }
+            .pccca{
+              img{
+                width: 33px;
+              }
+            }
+            .ccca{
+              img{
+                width: 65px;
+              }
+            }
+          }
+
+        }
+
+
+      }
+
+      .yield{
+        background-color: white;
+        width: 635px;
+        float: left;
+
+      }
+
+    }
+  }
+
   .footer{
+    clear: both;
     .content{
       background-color: $main_green;
       color: white;
