--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,6 +1,8 @@
 
 @import "colors";
 
+$border-radius: 10px;
+
 
 body{
 
@@ -45,6 +47,8 @@ body{
       width: 275px;
       margin-right: 50px;
       display: inline-block;
+      border-bottom-left-radius: $border-radius;
+      border-bottom-right-radius: $border-radius;
 
       .sign-up{
         font-size: 18px;
@@ -65,6 +69,8 @@ body{
       color: white;
       position: absolute;
       bottom: 0px;
+      border-top-left-radius: $border-radius;
+      border-top-right-radius: $border-radius;
 
       .fb-like{
         margin-left: 30px;
@@ -88,6 +94,7 @@ body{
         float: left;
         padding-left: 10px;
         padding-right: 10px;
+        margin-top: 20px;
 
         .menu{
           margin-top: 10px;
@@ -108,6 +115,10 @@ body{
               a{
                 color: black;
                 font-size: 12px;
+                display: block;
+                padding: 5px;
+                margin: -5px;
+
                 &:hover{
                   text-decoration: none;
                 }
@@ -188,11 +199,22 @@ body{
         float: left;
         margin-bottom: 20px;
 
+        .top-spacer{
+          background-color: $light_green;
+          height: 20px;
+          width: 900px;
+          margin-left: -265px;
+          border-bottom-left-radius: 10px;
+        }
+
         #body_content_title{
           background-color: $light_green;
           margin-top: 0px;
-          padding: 10px 10px;
+          padding: 0px 0px 10px 10px;
           color: $main_green;
+          min-height: 40px;
+          border-bottom-left-radius: $border-radius;
+          border-bottom-right-radius: $border-radius;
         }
 
         .text-align-center{
@@ -214,6 +236,8 @@ body{
     .content{
       position: relative;
       background-color: $main_green;
+      border-bottom-left-radius: $border-radius;
+      border-bottom-right-radius: $border-radius;
       color: white;
       height: 50px;
 
