--- a/app/views/_left_nav.html.haml
+++ b/app/views/_left_nav.html.haml
@@ -25,7 +25,7 @@
     .item
       fax: 402.628.8255
     .item
-      email: calvincrest@calvincrest.org
+      email: #{mail_to('calvincrest@calvincrest.org')}
   .site-links
     %a.aca{href: "http://www.acacamps.org"}
       %img{src: "#{image_path('aca.png')}"}
