adding links to banner

--- a/app/views/_header.html.haml
+++ b/app/views/_header.html.haml
@@ -3,7 +3,12 @@
   .content
     %a.logo{href: '/'}
     .newsletter
-      %a.sign-up{href: '/contact'}
+      %a.sign-up{href: '/'}
         Sign up for our Newsletter
     .banner
       .fb-like{"data-href" => "https://www.facebook.com/calvincrest", "data-layout" => "button_count", "data-send" => "false", "data-show-faces" => "false", "data-width" => "450"}
+      .links
+        %a.home{href: '/'}
+          Home
+        %a.contact-us{href: '/contact'}
+          Contact Us
