--- a/app/views/_left_nav.html.haml
+++ b/app/views/_left_nav.html.haml
@@ -27,9 +27,9 @@
     .item
       email: #{mail_to('calvincrest@calvincrest.org')}
   .site-links
-    %a.aca{href: "http://www.acacamps.org"}
+    %a.aca{href: "http://www.acacamps.org", target: '_blank'}
       %img{src: "#{image_path('aca.png')}"}
-    %a.pccca{href: "http://www.pccca.net"}
+    %a.pccca{href: "http://www.pccca.net", target: '_blank'}
       %img{src: "#{image_path('pcusa.png')}"}
-    %a.ccca{href: "http://www.ccca.org"}
+    %a.ccca{href: "http://www.ccca.org", target: '_blank'}
       %img{src: "#{image_path('ccca-M-logo-web.jpg')}"}
