--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,8 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
 
+    %script{:src => "http://maps.google.com/maps/api/js?sensor=false", :type => "text/javascript"}
+
     #fb-root
     :javascript
       (function(d, s, id) {
