--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -76,16 +76,16 @@ body{
       border-top-left-radius: $border-radius;
       border-top-right-radius: $border-radius;
 
-      .fb-like{
+      .facebook{
         margin-left: 30px;
         margin-top: 20px;
         float: left;
+        width: 100px;
       }
 
       .links{
         float: right;
         margin-top: 20px;
-        margin-right: 20px;
         font-size: 24px;
         a{
           margin-right: 10px;
@@ -99,6 +99,16 @@ body{
           &:last-child{
             border-right: none;
           }
+        }
+      }
+
+      .search{
+        float: right;
+        margin-top: 17px;
+        margin-right: 20px;
+
+        form{
+          margin: 0;
         }
       }
 
