working on fixing errors

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,6 +32,6 @@
     = render "/footer"
 
 
-  - if @page.slug == 'directions'
+  - if @page && @page.slug == 'directions'
     :javascript
       calvincrest.functions.setupMap()
