--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -268,6 +268,10 @@ body{
           border-bottom-left-radius: $border-radius;
           border-bottom-right-radius: $border-radius;
 
+          #body{
+            margin-right: 10px;
+          }
+
         }
 
         .text-align-center{
