--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -144,6 +144,7 @@ body{
               border-left: $main_green solid 1px;
               border-top: $main_green solid 1px;
               border-right: $main_green solid 1px;
+              z-index: 1000;
 
               &:last-child{
                 border-bottom: $main_green solid 1px;
